--- a/index.html
+++ b/index.html
@@ -102,6 +102,20 @@
         </div>
     </div>
 
+    <div class="container py-5">
+        <div class="row py-5">
+            <div class="col-lg-6 py-4">
+                <img class="myimage img-fluid pt-4" src="images/about.png" alt="">
+            </div>
+            <div class="col-lg-6">
+                <p class="paragraf1">Saving Money</p>
+                <h2 class="mysentence">Best Financing App to save your money</h2>
+                <p class="paragraf2 mb-5">Best financing app ever in the world. Easy to use and very user friendly for mobile banking. You can control your card easily and send money some one just one click.</p>
+                <a class="myclick " href="">Read More </a>
+            </div>
+        </div>
+    </div>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
